--- a/App/Voltflow/Views/Pages/Map/SidePanels/StationStatisticsView.axaml
+++ b/App/Voltflow/Views/Pages/Map/SidePanels/StationStatisticsView.axaml
@@ -1,15 +1,27 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Voltflow.Views.Pages.Map.SidePanels.StationStatisticsView"
-             xmlns:lvc="using:LiveChartsCore.SkiaSharpView.Avalonia">
-	<StackPanel>
-		<TextBlock Text="test"/>
-		<lvc:CartesianChart
-            Series="{Binding Series}"
-            Width="700"
-			Height="500"/>
-	</StackPanel>
+<UserControl
+    x:Class="Voltflow.Views.Pages.Map.SidePanels.StationStatisticsView"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:lvc="using:LiveChartsCore.SkiaSharpView.Avalonia"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:sidePanels="clr-namespace:Voltflow.ViewModels.Pages.Map.SidePanels"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <Design.DataContext>
+        <sidePanels:StationStatisticsViewModel />
+    </Design.DataContext>
+
+    <StackPanel VerticalAlignment="Center">
+        <TextBlock
+            HorizontalAlignment="Center"
+            Classes="size-lg weight-bold"
+            Text="Rush hours (Monday to Sunday)" />
+
+        <lvc:CartesianChart
+            Height="512"
+            MaxWidth="512"
+            Series="{Binding Series}" />
+    </StackPanel>
 </UserControl>
