--- a/App/Voltflow/Views/Pages/Map/SidePanels/ManageStationView.axaml
+++ b/App/Voltflow/Views/Pages/Map/SidePanels/ManageStationView.axaml
@@ -22,55 +22,54 @@
 
         <Separator />
 
-        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-            <iconPacks:PackIconMaterialDesign
-                Classes="size-sm"
-                IsVisible="True"
-                Kind="SwapVert" />
-            <TextBlock Classes="size-sm weight-bold" Text="Longitude" />
-        </StackPanel>
-        <controls:NumberBox AllowFloats="True" Text="{Binding Longitude}" />
+        <StackPanel IsEnabled="{Binding Clicked}">
+            <StackPanel Classes="sm-spacing" Orientation="Horizontal">
+                <iconPacks:PackIconMaterialDesign
+                    Classes="size-sm"
+                    IsVisible="True"
+                    Kind="SwapVert" />
+                <TextBlock Classes="size-sm weight-bold" Text="Longitude" />
+            </StackPanel>
+            <controls:NumberBox AllowFloats="True" Text="{Binding Longitude}" />
 
-        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-            <iconPacks:PackIconMaterialDesign
-                Classes="size-sm"
-                IsVisible="True"
-                Kind="SwapHoriz" />
-            <TextBlock Classes="size-sm weight-bold" Text="Latitude" />
-        </StackPanel>
-        <controls:NumberBox AllowFloats="True" Text="{Binding Latitude}" />
+            <StackPanel Classes="sm-spacing" Orientation="Horizontal">
+                <iconPacks:PackIconMaterialDesign
+                    Classes="size-sm"
+                    IsVisible="True"
+                    Kind="SwapHoriz" />
+                <TextBlock Classes="size-sm weight-bold" Text="Latitude" />
+            </StackPanel>
+            <controls:NumberBox AllowFloats="True" Text="{Binding Latitude}" />
 
-        <Separator />
+            <Separator />
 
-        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-            <iconPacks:PackIconMaterialDesign
-                Classes="size-sm"
-                IsVisible="True"
-                Kind="Payment" />
-            <TextBlock Classes="size-sm weight-bold" Text="Cost" />
-        </StackPanel>
-        <controls:NumberBox Text="{Binding Cost}" />
+            <StackPanel Classes="sm-spacing" Orientation="Horizontal">
+                <iconPacks:PackIconMaterialDesign
+                    Classes="size-sm"
+                    IsVisible="True"
+                    Kind="Payment" />
+                <TextBlock Classes="size-sm weight-bold" Text="Cost" />
+            </StackPanel>
+            <controls:NumberBox Text="{Binding Cost}" />
 
-        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-            <iconPacks:PackIconMaterialDesign
-                Classes="size-sm"
-                IsVisible="True"
-                Kind="Bolt" />
-            <TextBlock Classes="size-sm weight-bold" Text="Maximum Charging Rate" />
-        </StackPanel>
-        <controls:NumberBox Text="{Binding MaxChargeRate}" Watermark="MaxChargeRate" />
+            <StackPanel Classes="sm-spacing" Orientation="Horizontal">
+                <iconPacks:PackIconMaterialDesign
+                    Classes="size-sm"
+                    IsVisible="True"
+                    Kind="Bolt" />
+                <TextBlock Classes="size-sm weight-bold" Text="Maximum Charging Rate" />
+            </StackPanel>
+            <controls:NumberBox Text="{Binding MaxChargeRate}" Watermark="MaxChargeRate" />
+            <Separator />
 
-        <Separator />
+            <StackPanel IsEnabled="{Binding !CreatingNewPoint}">
+                <CheckBox Content="Out of Service" IsChecked="{Binding IsOutOfService}" />
+                <CheckBox
+                    Content="Service Mode"
+                    IsChecked="{Binding IsInServiceMode}"
+                    IsEnabled="{Binding IsOutOfService}" />
+            </StackPanel>
 
-        <StackPanel IsEnabled="{Binding !CreatingNewPoint}">
-            <CheckBox Content="Out of Service" IsChecked="{Binding IsOutOfService}" />
-            <CheckBox
-                Content="Service Mode"
-                IsChecked="{Binding IsInServiceMode}"
-                IsEnabled="{Binding IsOutOfService}" />
-        </StackPanel>
-
-        <StackPanel IsVisible="{Binding Clicked}">
             <Separator />
 
             <Button
