--- a/App/Voltflow/Views/Pages/Charging/ChargingView.axaml
+++ b/App/Voltflow/Views/Pages/Charging/ChargingView.axaml
@@ -19,34 +19,6 @@
             Width="256"
             HorizontalAlignment="Center"
             VerticalAlignment="Center">
-            <!--  Station info  -->
-            <!--
-            <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-                <iconPacks:PackIconMaterialDesign
-                    Classes="size-sm"
-                    IsVisible="True"
-                    Kind="Payment" />
-                <TextBlock Classes="size-sm weight-bold" Text="Cost" />
-            </StackPanel>
-            <StackPanel Classes="xs-spacing" Orientation="Horizontal">
-                <TextBlock Classes="size-sm" Text="{Binding CurrentStation.Cost}" />
-                <TextBlock Classes="size-sm" Text="zł" />
-            </StackPanel>
-
-            <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-                <iconPacks:PackIconMaterialDesign
-                    Classes="size-sm"
-                    IsVisible="True"
-                    Kind="Bolt" />
-                <TextBlock Classes="size-sm weight-bold" Text="Maximum Charging Rate" />
-            </StackPanel>
-            <StackPanel Classes="xs-spacing" Orientation="Horizontal">
-                <TextBlock Classes="size-sm" Text="{Binding CurrentStation.MaxChargeRate}" />
-                <TextBlock Classes="size-sm" Text="kWh" />
-            </StackPanel>
-
-            <Separator />-->
-
             <!--  Data  -->
             <StackPanel Classes="sm-spacing" Orientation="Horizontal">
                 <iconPacks:PackIconMaterialDesign
@@ -80,7 +52,7 @@
                         Classes="size-sm"
                         IsVisible="True"
                         Kind="Battery3Bar" />
-                    <TextBlock Classes="size-sm weight-bold" Text="Declare Amount? (kW)" />
+                    <TextBlock Classes="size-sm weight-bold" Text="Declare Charge Limit? (kWh)" />
                 </StackPanel>
 
                 <CheckBox Grid.Column="1" IsChecked="{Binding DeclaredAmount}" />
@@ -109,7 +81,7 @@
                         Classes="size-sm"
                         IsVisible="True"
                         Kind="BatteryFull" />
-                    <TextBlock Classes="size-sm weight-bold" Text="Charged" />
+                    <TextBlock Classes="size-sm weight-bold" Text="Charged (kWh)" />
                 </StackPanel>
                 <StackPanel Classes="xs-spacing" Orientation="Horizontal">
                     <TextBlock Classes="size-sm" Text="{Binding TotalCharge}" />
