Fix buttons in charging page

--- a/App/Voltflow/Views/Pages/Charging/ChargingView.axaml
+++ b/App/Voltflow/Views/Pages/Charging/ChargingView.axaml
@@ -107,7 +107,7 @@
             </StackPanel>
 
             <!--  Controls  -->
-            <Grid>
+            <Grid IsEnabled="{Binding !Working}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="8" />
