--- a/App/Voltflow/Views/Pages/Charging/ChargingView.axaml
+++ b/App/Voltflow/Views/Pages/Charging/ChargingView.axaml
@@ -30,7 +30,8 @@
             <ComboBox
                 HorizontalAlignment="Stretch"
                 ItemsSource="{Binding Cars}"
-                SelectedIndex="{Binding PickedIndex}">
+                SelectedIndex="{Binding SelectedIndex}"
+                SelectedItem="{Binding SelectedCar}">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Name}" />
@@ -142,7 +143,8 @@
             <Button
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
-                Command="{Binding NavigateHome}">
+                Command="{Binding NavigateHome}"
+                IsEnabled="{Binding !Working}">
                 <StackPanel Orientation="Horizontal">
                     <iconPacks:PackIconMaterialDesign Kind="ArrowBack" />
                     <TextBlock Text="Go Back" />
