--- a/App/Voltflow/Views/Pages/Charging/ChargingView.axaml
+++ b/App/Voltflow/Views/Pages/Charging/ChargingView.axaml
@@ -25,7 +25,7 @@
                     Classes="size-sm"
                     IsVisible="True"
                     Kind="DirectionsCar" />
-                <TextBlock Classes="size-sm weight-bold" Text="Selected Car" />
+                <TextBlock Classes="size-sm weight-bold" Text="Car" />
             </StackPanel>
             <ComboBox
                 HorizontalAlignment="Stretch"
@@ -53,7 +53,7 @@
                         Classes="size-sm"
                         IsVisible="True"
                         Kind="Battery3Bar" />
-                    <TextBlock Classes="size-sm weight-bold" Text="Declare Charge Limit? (kWh)" />
+                    <TextBlock Classes="size-sm weight-bold" Text="Set Charge Limit? (kWh)" />
                 </StackPanel>
 
                 <CheckBox Grid.Column="1" IsChecked="{Binding DeclaredAmount}" />
