--- a/App/Voltflow/Views/Pages/Statistics/AdvancedStatisticsView.axaml
+++ b/App/Voltflow/Views/Pages/Statistics/AdvancedStatisticsView.axaml
@@ -9,9 +9,6 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Design.DataContext>
-        <statistics:AdvancedStatisticsViewModel />
-    </Design.DataContext>
 
     <ScrollViewer>
         <StackPanel
@@ -22,10 +19,30 @@
             <CheckBox Content="Switch to energy used" IsChecked="{Binding Mode}" />
 
             <lvc:PieChart
+				x:Name="pieChart"
                 Width="800"
                 Height="450"
                 Series="{Binding PieData}" />
 
+			<!--Stations-->
+			<Panel
+				Width="500"
+				Height="50"
+				Background="Gray">
+				<Button Command="{Binding GenerateStationsCsv}" Content="Generate CSV" />
+			</Panel>
+
+			<DataGrid
+				Width="500"
+                Height="400"
+                AutoGenerateColumns="True"
+                BorderBrush="Gray"
+                BorderThickness="1"
+                GridLinesVisibility="All"
+                IsReadOnly="True"
+                ItemsSource="{Binding StationGridData}" />
+
+			<!--Transactions-->
             <Panel
                 Width="500"
                 Height="50"
@@ -33,8 +50,9 @@
                 <Button Command="{Binding GenerateTransactionsCsv}" Content="Generate CSV" />
             </Panel>
 
-            <DataGrid
-                Height="100"
+			<DataGrid
+				Width="500"
+                Height="400"
                 AutoGenerateColumns="True"
                 BorderBrush="Gray"
                 BorderThickness="1"
@@ -42,21 +60,7 @@
                 IsReadOnly="True"
                 ItemsSource="{Binding TransactionsGridData}" />
 
-            <Panel
-                Width="500"
-                Height="50"
-                Background="Gray">
-                <Button Command="{Binding GenerateStationsCsv}" Content="Generate CSV" />
-            </Panel>
-
-            <DataGrid
-                Height="100"
-                AutoGenerateColumns="True"
-                BorderBrush="Gray"
-                BorderThickness="1"
-                GridLinesVisibility="All"
-                IsReadOnly="True"
-                ItemsSource="{Binding StationGridData}" />
+           
         </StackPanel>
     </ScrollViewer>
 </UserControl>
