--- a/App/Voltflow/Views/Pages/Statistics/AdvancedStatisticsView.axaml
+++ b/App/Voltflow/Views/Pages/Statistics/AdvancedStatisticsView.axaml
@@ -9,6 +9,9 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
+    <Design.DataContext>
+        <statistics:AdvancedStatisticsViewModel />
+    </Design.DataContext>
 
     <ScrollViewer>
         <StackPanel
@@ -19,21 +22,21 @@
             <CheckBox Content="Switch to energy used" IsChecked="{Binding Mode}" />
 
             <lvc:PieChart
-				x:Name="pieChart"
+                x:Name="PieChart"
                 Width="800"
                 Height="450"
                 Series="{Binding PieData}" />
 
-			<!--Stations-->
-			<Panel
-				Width="500"
-				Height="50"
-				Background="Gray">
-				<Button Command="{Binding GenerateStationsCsv}" Content="Generate CSV" />
-			</Panel>
+            <!--  Stations  -->
+            <Panel
+                Width="500"
+                Height="50"
+                Background="Gray">
+                <Button Command="{Binding GenerateStationsCsv}" Content="Generate CSV" />
+            </Panel>
 
-			<DataGrid
-				Width="500"
+            <DataGrid
+                Width="500"
                 Height="400"
                 AutoGenerateColumns="True"
                 BorderBrush="Gray"
@@ -42,7 +45,7 @@
                 IsReadOnly="True"
                 ItemsSource="{Binding StationGridData}" />
 
-			<!--Transactions-->
+            <!--  Transactions  -->
             <Panel
                 Width="500"
                 Height="50"
@@ -50,8 +53,8 @@
                 <Button Command="{Binding GenerateTransactionsCsv}" Content="Generate CSV" />
             </Panel>
 
-			<DataGrid
-				Width="500"
+            <DataGrid
+                Width="500"
                 Height="400"
                 AutoGenerateColumns="True"
                 BorderBrush="Gray"
@@ -59,8 +62,6 @@
                 GridLinesVisibility="All"
                 IsReadOnly="True"
                 ItemsSource="{Binding TransactionsGridData}" />
-
-           
         </StackPanel>
     </ScrollViewer>
 </UserControl>
