--- a/App/Voltflow/Views/Pages/Statistics/StatisticsView.axaml
+++ b/App/Voltflow/Views/Pages/Statistics/StatisticsView.axaml
@@ -10,6 +10,10 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
+    <Design.DataContext>
+        <statistics:StatisticsViewModel />
+    </Design.DataContext>
+
     <ScrollViewer>
         <StackPanel
             Width="256"
@@ -34,8 +38,8 @@
                 <Button Command="{Binding GenerateCsv}" Content="Generate CSV" />
             </Panel>
 
-			<DataGrid
-				Width="500"
+            <DataGrid
+                Width="500"
                 Height="400"
                 AutoGenerateColumns="True"
                 BorderBrush="Gray"
